fix: my latest projects scrollbar and ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,3 +89,12 @@
   stroke-dashoffset: -32.42;
 }
 /* End of Mobile & Tablet Hamburger */
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
